server/compilers/goLiteJS/src/test/ml1/invalid/func21.go
// trailing comma in function call
package main

f(,)
